Compiler/tests/typing2/good/testfile-borrow-5.rs

fn bar(v: Vec<& i32>) { }
fn main() { let mut x = 42; let y = 89; bar(vec![&y, &mut x]); }

